# comp2811-group-project

./: .gitignore  COMP2811_CW3_Requirements.md  README.md
solution/: .gitignore  CMakeLists.txt  custom_proxy_model.cpp  custom_proxy_model.hpp  dataset.cpp  dataset.hpp  generate_small_dataset.py  line_chart.cpp  line_chart.hpp  main.cpp  model.cpp  model.hpp  navbar.cpp  navbar.hpp  pollutant_line_chart.cpp  pollutant_line_chart.hpp  pollutant_scatter_chart.cpp  pollutant_scatter_chart.hpp  table_model.cpp  table_model.hpp  text_components.cpp  text_components.hpp  water_sample.cpp  water_sample.hpp  window.cpp  window.hpp
solution/data/: 2024-M_small.csv  2024_small.csv  2024_small.db  data_small.db
solution/pages/: compliance_dashboard.cpp  compliance_dashboard.hpp  data_page.cpp  data_page.hpp  environmental_litter_indicators.cpp  environmental_litter_indicators.hpp  fluorinated_compounds.cpp  fluorinated_compounds.hpp  help_page.cpp  help_page.hpp  home.cpp  home.hpp  page.cpp  page.hpp  persistent_organic_pollutants.cpp  persistent_organic_pollutants.hpp  pollutant_overview.cpp  pollutant_overview.hpp
